--- a/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/hyperparameter-tuning-with-child-runs.ipynb
+++ b/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/hyperparameter-tuning-with-child-runs.ipynb
@@ -126,24 +126,24 @@
    "outputs": [],
    "source": [
     "def generate_apple_sales_data_with_promo_adjustment(\n",
-    "    base_demand: int = 1000, \n",
+    "    base_demand: int = 1000,\n",
     "    n_rows: int = 5000,\n",
     "    competitor_price_effect: float = -50.0,\n",
     "):\n",
     "    \"\"\"\n",
-    "    Generates a synthetic dataset for predicting apple sales demand with multiple \n",
+    "    Generates a synthetic dataset for predicting apple sales demand with multiple\n",
     "    influencing factors.\n",
     "\n",
     "    This function creates a pandas DataFrame with features relevant to apple sales.\n",
     "    The features include date, average_temperature, rainfall, weekend flag, holiday flag,\n",
     "    promotional flag, price_per_kg, competitor's price, marketing intensity, stock availability,\n",
-    "    and the previous day's demand. The target variable, 'demand', is generated based on a \n",
+    "    and the previous day's demand. The target variable, 'demand', is generated based on a\n",
     "    combination of these features with some added noise.\n",
     "\n",
     "    Args:\n",
     "        base_demand (int, optional): Base demand for apples. Defaults to 1000.\n",
     "        n_rows (int, optional): Number of rows (days) of data to generate. Defaults to 5000.\n",
-    "        competitor_price_effect (float, optional): Effect of competitor's price being lower \n",
+    "        competitor_price_effect (float, optional): Effect of competitor's price being lower\n",
     "                                                   on our sales. Defaults to -50.\n",
     "    Returns:\n",
     "        pd.DataFrame: DataFrame with features and target variable for apple sales prediction.\n",
@@ -174,9 +174,7 @@
     "    )\n",
     "\n",
     "    # Introduce inflation over time (years)\n",
-    "    df[\"inflation_multiplier\"] = (\n",
-    "        1 + (df[\"date\"].dt.year - df[\"date\"].dt.year.min()) * 0.03\n",
-    "    )\n",
+    "    df[\"inflation_multiplier\"] = 1 + (df[\"date\"].dt.year - df[\"date\"].dt.year.min()) * 0.03\n",
     "\n",
     "    # Incorporate seasonality due to apple harvests\n",
     "    df[\"harvest_effect\"] = np.sin(2 * np.pi * (df[\"month\"] - 3) / 12) + np.sin(\n",
@@ -212,15 +210,13 @@
     "\n",
     "    # Add previous day's demand\n",
     "    df[\"previous_days_demand\"] = df[\"demand\"].shift(1)\n",
-    "    df[\"previous_days_demand\"].fillna(\n",
-    "        method=\"bfill\", inplace=True\n",
-    "    )  # fill the first row\n",
+    "    df[\"previous_days_demand\"].fillna(method=\"bfill\", inplace=True)  # fill the first row\n",
     "\n",
     "    # Introduce competitor pricing\n",
     "    df[\"competitor_price_per_kg\"] = np.random.uniform(0.5, 3, n_rows)\n",
     "    df[\"competitor_price_effect\"] = (\n",
-    "        (df[\"competitor_price_per_kg\"] < df[\"price_per_kg\"]) * competitor_price_effect\n",
-    "    )\n",
+    "        df[\"competitor_price_per_kg\"] < df[\"price_per_kg\"]\n",
+    "    ) * competitor_price_effect\n",
     "\n",
     "    # Stock availability based on past sales price (3 days lag with logarithmic decay)\n",
     "    log_decay = -np.log(df[\"price_per_kg\"].shift(3) + 1) + 2\n",
@@ -232,29 +228,29 @@
     "\n",
     "    # For each high stock day, increase marketing intensity for the next week\n",
     "    for idx in high_stock_indices:\n",
-    "        df.loc[idx:min(idx+7, n_rows-1), \"marketing_intensity\"] = np.random.uniform(0.7, 1)\n",
+    "        df.loc[idx : min(idx + 7, n_rows - 1), \"marketing_intensity\"] = np.random.uniform(0.7, 1)\n",
     "\n",
-    "    # If the marketing_intensity column already has values, this will preserve them; \n",
+    "    # If the marketing_intensity column already has values, this will preserve them;\n",
     "    #  if not, it sets default values\n",
     "    fill_values = pd.Series(np.random.uniform(0, 0.5, n_rows), index=df.index)\n",
     "    df[\"marketing_intensity\"].fillna(fill_values, inplace=True)\n",
     "\n",
-    "\n",
-    "\n",
     "    # Adjust demand with new factors\n",
-    "    df[\"demand\"] = (\n",
-    "        df[\"demand\"]\n",
-    "        + df[\"competitor_price_effect\"]\n",
-    "        + df[\"marketing_intensity\"]\n",
-    "    )\n",
+    "    df[\"demand\"] = df[\"demand\"] + df[\"competitor_price_effect\"] + df[\"marketing_intensity\"]\n",
     "\n",
     "    # Drop temporary columns\n",
     "    df.drop(\n",
-    "        columns=[\"inflation_multiplier\", \"harvest_effect\", \"month\", \"competitor_price_effect\", \"stock_available\"],\n",
-    "        inplace=True\n",
+    "        columns=[\n",
+    "            \"inflation_multiplier\",\n",
+    "            \"harvest_effect\",\n",
+    "            \"month\",\n",
+    "            \"competitor_price_effect\",\n",
+    "            \"stock_available\",\n",
+    "        ],\n",
+    "        inplace=True,\n",
     "    )\n",
     "\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -550,53 +546,57 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def plot_correlation_with_demand(df, save_path=None):\n",
     "    \"\"\"\n",
     "    Plots the correlation of each variable in the dataframe with the 'demand' column.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "    - df (pd.DataFrame): DataFrame containing the data, including a 'demand' column.\n",
     "    - save_path (str, optional): Path to save the generated plot. If not specified, plot won't be saved.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "    - None (Displays the plot on a Jupyter window)\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Compute correlations between all variables and 'demand'\n",
-    "    correlations = df.corr()['demand'].drop('demand').sort_values()\n",
+    "    correlations = df.corr()[\"demand\"].drop(\"demand\").sort_values()\n",
     "\n",
     "    # Generate a color palette from red to green\n",
     "    colors = sns.diverging_palette(10, 130, as_cmap=True)\n",
     "    color_mapped = correlations.map(colors)\n",
     "\n",
     "    # Set Seaborn style\n",
-    "    sns.set_style(\"whitegrid\", {'axes.facecolor': '#c2c4c2', 'grid.linewidth': 1.5})  # Light grey background and thicker grid lines\n",
+    "    sns.set_style(\n",
+    "        \"whitegrid\", {\"axes.facecolor\": \"#c2c4c2\", \"grid.linewidth\": 1.5}\n",
+    "    )  # Light grey background and thicker grid lines\n",
     "\n",
     "    # Create bar plot\n",
     "    fig = plt.figure(figsize=(12, 8))\n",
     "    bars = plt.barh(correlations.index, correlations.values, color=color_mapped)\n",
-    "    \n",
+    "\n",
     "    # Set labels and title with increased font size\n",
-    "    plt.title('Correlation with Demand', fontsize=18)\n",
-    "    plt.xlabel('Correlation Coefficient', fontsize=16)\n",
-    "    plt.ylabel('Variable', fontsize=16)\n",
+    "    plt.title(\"Correlation with Demand\", fontsize=18)\n",
+    "    plt.xlabel(\"Correlation Coefficient\", fontsize=16)\n",
+    "    plt.ylabel(\"Variable\", fontsize=16)\n",
     "    plt.xticks(fontsize=14)\n",
     "    plt.yticks(fontsize=14)\n",
-    "    plt.grid(axis='x')\n",
+    "    plt.grid(axis=\"x\")\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    \n",
+    "\n",
     "    # prevent matplotlib from displaying the chart every time we call this function\n",
     "    plt.close(fig)\n",
     "\n",
     "    # Save the plot if save_path is specified\n",
     "    if save_path:\n",
-    "        plt.savefig(save_path, format='png', dpi=600)\n",
-    "    \n",
+    "        plt.savefig(save_path, format=\"png\", dpi=600)\n",
+    "\n",
     "    return fig\n",
     "\n",
+    "\n",
     "# Test the function\n",
-    "correlation_plot = plot_correlation_with_demand(df, save_path=\"correlation_plot.png\")\n"
+    "correlation_plot = plot_correlation_with_demand(df, save_path=\"correlation_plot.png\")"
    ]
   },
   {
@@ -835,8 +835,8 @@
     "    \"\"\"\n",
     "    Retrieve the ID of an existing MLflow experiment or create a new one if it doesn't exist.\n",
     "\n",
-    "    This function checks if an experiment with the given name exists within MLflow. \n",
-    "    If it does, the function returns its ID. If not, it creates a new experiment \n",
+    "    This function checks if an experiment with the given name exists within MLflow.\n",
+    "    If it does, the function returns its ID. If not, it creates a new experiment\n",
     "    with the provided name and returns its ID.\n",
     "\n",
     "    Parameters:\n",
@@ -845,11 +845,11 @@
     "    Returns:\n",
     "    - str: ID of the existing or newly created MLflow experiment.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    if experiment := mlflow.get_experiment_by_name(experiment_name):\n",
-    "            return experiment.experiment_id\n",
+    "        return experiment.experiment_id\n",
     "    else:\n",
-    "        return mlflow.create_experiment(experiment_name)\n"
+    "        return mlflow.create_experiment(experiment_name)"
    ]
   },
   {
@@ -1035,31 +1035,34 @@
     "# override Optuna's default logging to ERROR only\n",
     "optuna.logging.set_verbosity(optuna.logging.ERROR)\n",
     "\n",
-    "# define a logging callback that will report on only new challenger parameter configurations if a \n",
+    "# define a logging callback that will report on only new challenger parameter configurations if a\n",
     "# trial has usurped the state of 'best conditions'\n",
+    "\n",
     "\n",
     "def champion_callback(study, frozen_trial):\n",
     "    \"\"\"\n",
-    "    Logging callback that will report when a new trial iteration improves upon existing \n",
-    "    best trial values. \n",
-    "    \n",
-    "    Note: This callback is not intended for use in distributed computing systems such as Spark \n",
-    "    or Ray due to the micro-batch iterative implementation for distributing trials to a cluster's \n",
-    "    workers or agents. \n",
-    "    The race conditions with file system state management for distributed trials will render \n",
+    "    Logging callback that will report when a new trial iteration improves upon existing\n",
+    "    best trial values.\n",
+    "\n",
+    "    Note: This callback is not intended for use in distributed computing systems such as Spark\n",
+    "    or Ray due to the micro-batch iterative implementation for distributing trials to a cluster's\n",
+    "    workers or agents.\n",
+    "    The race conditions with file system state management for distributed trials will render\n",
     "    inconsistent values with this callback.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    winner = study.user_attrs.get(\"winner\", None)\n",
-    "    \n",
+    "\n",
     "    if study.best_value and winner != study.best_value:\n",
     "        study.set_user_attr(\"winner\", study.best_value)\n",
     "        if winner:\n",
     "            improvement_percent = (abs(winner - study.best_value) / study.best_value) * 100\n",
-    "            print(f\"Trial {frozen_trial.number} achieved value: {frozen_trial.value} with \"\n",
-    "                  f\"{improvement_percent: .4f}% improvement\")\n",
+    "            print(\n",
+    "                f\"Trial {frozen_trial.number} achieved value: {frozen_trial.value} with \"\n",
+    "                f\"{improvement_percent: .4f}% improvement\"\n",
+    "            )\n",
     "        else:\n",
-    "            print(f\"Initial trial {frozen_trial.number} achieved value: {frozen_trial.value}\")\n"
+    "            print(f\"Initial trial {frozen_trial.number} achieved value: {frozen_trial.value}\")"
    ]
   },
   {
@@ -1075,9 +1078,7 @@
     "        params = {\n",
     "            \"objective\": \"reg:squarederror\",\n",
     "            \"eval_metric\": \"rmse\",\n",
-    "            \"booster\": trial.suggest_categorical(\n",
-    "                \"booster\", [\"gbtree\", \"gblinear\", \"dart\"]\n",
-    "            ),\n",
+    "            \"booster\": trial.suggest_categorical(\"booster\", [\"gbtree\", \"gblinear\", \"dart\"]),\n",
     "            \"lambda\": trial.suggest_float(\"lambda\", 1e-8, 1.0, log=True),\n",
     "            \"alpha\": trial.suggest_float(\"alpha\", 1e-8, 1.0, log=True),\n",
     "        }\n",
@@ -1248,9 +1249,7 @@
     "    mlflow.log_figure(figure=correlation_plot, artifact_file=\"correlation_plot.png\")\n",
     "\n",
     "    # Log the feature importances plot\n",
-    "    importances = plot_feature_importance(\n",
-    "        model, booster=study.best_params.get(\"booster\")\n",
-    "    )\n",
+    "    importances = plot_feature_importance(model, booster=study.best_params.get(\"booster\"))\n",
     "    mlflow.log_figure(figure=importances, artifact_file=\"feature_importances.png\")\n",
     "\n",
     "    # Log the residuals plot\n",
