--- a/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/logging-plots-in-mlflow.ipynb
+++ b/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/logging-plots-in-mlflow.ipynb
@@ -22,8 +22,13 @@
     "\n",
     "import mlflow\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.metrics import (mean_squared_error, mean_absolute_error, r2_score,\n",
-    "                             mean_squared_log_error, median_absolute_error)\n",
+    "from sklearn.metrics import (\n",
+    "    mean_squared_error,\n",
+    "    mean_absolute_error,\n",
+    "    r2_score,\n",
+    "    mean_squared_log_error,\n",
+    "    median_absolute_error,\n",
+    ")\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -89,24 +94,24 @@
    "outputs": [],
    "source": [
     "def generate_apple_sales_data_with_promo_adjustment(\n",
-    "    base_demand: int = 1000, \n",
+    "    base_demand: int = 1000,\n",
     "    n_rows: int = 5000,\n",
     "    competitor_price_effect: float = -50.0,\n",
     "):\n",
     "    \"\"\"\n",
-    "    Generates a synthetic dataset for predicting apple sales demand with multiple \n",
+    "    Generates a synthetic dataset for predicting apple sales demand with multiple\n",
     "    influencing factors.\n",
     "\n",
     "    This function creates a pandas DataFrame with features relevant to apple sales.\n",
     "    The features include date, average_temperature, rainfall, weekend flag, holiday flag,\n",
     "    promotional flag, price_per_kg, competitor's price, marketing intensity, stock availability,\n",
-    "    and the previous day's demand. The target variable, 'demand', is generated based on a \n",
+    "    and the previous day's demand. The target variable, 'demand', is generated based on a\n",
     "    combination of these features with some added noise.\n",
     "\n",
     "    Args:\n",
     "        base_demand (int, optional): Base demand for apples. Defaults to 1000.\n",
     "        n_rows (int, optional): Number of rows (days) of data to generate. Defaults to 5000.\n",
-    "        competitor_price_effect (float, optional): Effect of competitor's price being lower \n",
+    "        competitor_price_effect (float, optional): Effect of competitor's price being lower\n",
     "                                                   on our sales. Defaults to -50.\n",
     "    Returns:\n",
     "        pd.DataFrame: DataFrame with features and target variable for apple sales prediction.\n",
@@ -137,9 +142,7 @@
     "    )\n",
     "\n",
     "    # Introduce inflation over time (years)\n",
-    "    df[\"inflation_multiplier\"] = (\n",
-    "        1 + (df[\"date\"].dt.year - df[\"date\"].dt.year.min()) * 0.03\n",
-    "    )\n",
+    "    df[\"inflation_multiplier\"] = 1 + (df[\"date\"].dt.year - df[\"date\"].dt.year.min()) * 0.03\n",
     "\n",
     "    # Incorporate seasonality due to apple harvests\n",
     "    df[\"harvest_effect\"] = np.sin(2 * np.pi * (df[\"month\"] - 3) / 12) + np.sin(\n",
@@ -175,15 +178,13 @@
     "\n",
     "    # Add previous day's demand\n",
     "    df[\"previous_days_demand\"] = df[\"demand\"].shift(1)\n",
-    "    df[\"previous_days_demand\"].fillna(\n",
-    "        method=\"bfill\", inplace=True\n",
-    "    )  # fill the first row\n",
+    "    df[\"previous_days_demand\"].fillna(method=\"bfill\", inplace=True)  # fill the first row\n",
     "\n",
     "    # Introduce competitor pricing\n",
     "    df[\"competitor_price_per_kg\"] = np.random.uniform(0.5, 3, n_rows)\n",
     "    df[\"competitor_price_effect\"] = (\n",
-    "        (df[\"competitor_price_per_kg\"] < df[\"price_per_kg\"]) * competitor_price_effect\n",
-    "    )\n",
+    "        df[\"competitor_price_per_kg\"] < df[\"price_per_kg\"]\n",
+    "    ) * competitor_price_effect\n",
     "\n",
     "    # Stock availability based on past sales price (3 days lag with logarithmic decay)\n",
     "    log_decay = -np.log(df[\"price_per_kg\"].shift(3) + 1) + 2\n",
@@ -195,29 +196,29 @@
     "\n",
     "    # For each high stock day, increase marketing intensity for the next week\n",
     "    for idx in high_stock_indices:\n",
-    "        df.loc[idx:min(idx+7, n_rows-1), \"marketing_intensity\"] = np.random.uniform(0.7, 1)\n",
+    "        df.loc[idx : min(idx + 7, n_rows - 1), \"marketing_intensity\"] = np.random.uniform(0.7, 1)\n",
     "\n",
-    "    # If the marketing_intensity column already has values, this will preserve them; \n",
+    "    # If the marketing_intensity column already has values, this will preserve them;\n",
     "    #  if not, it sets default values\n",
     "    fill_values = pd.Series(np.random.uniform(0, 0.5, n_rows), index=df.index)\n",
     "    df[\"marketing_intensity\"].fillna(fill_values, inplace=True)\n",
     "\n",
-    "\n",
-    "\n",
     "    # Adjust demand with new factors\n",
-    "    df[\"demand\"] = (\n",
-    "        df[\"demand\"]\n",
-    "        + df[\"competitor_price_effect\"]\n",
-    "        + df[\"marketing_intensity\"]\n",
-    "    )\n",
+    "    df[\"demand\"] = df[\"demand\"] + df[\"competitor_price_effect\"] + df[\"marketing_intensity\"]\n",
     "\n",
     "    # Drop temporary columns\n",
     "    df.drop(\n",
-    "        columns=[\"inflation_multiplier\", \"harvest_effect\", \"month\", \"competitor_price_effect\", \"stock_available\"],\n",
-    "        inplace=True\n",
+    "        columns=[\n",
+    "            \"inflation_multiplier\",\n",
+    "            \"harvest_effect\",\n",
+    "            \"month\",\n",
+    "            \"competitor_price_effect\",\n",
+    "            \"stock_available\",\n",
+    "        ],\n",
+    "        inplace=True,\n",
     "    )\n",
     "\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -684,9 +685,7 @@
     "            ax=ax,\n",
     "        )\n",
     "\n",
-    "        ax.set_title(\n",
-    "            \"Scatter Plot of Demand vs Price per kg with Regression Line\", fontsize=14\n",
-    "        )\n",
+    "        ax.set_title(\"Scatter Plot of Demand vs Price per kg with Regression Line\", fontsize=14)\n",
     "        ax.set_xlabel(\"Price per kg\", fontsize=12)\n",
     "        ax.set_ylabel(\"Demand\", fontsize=12)\n",
     "        for i in ax.get_xticklabels() + ax.get_yticklabels():\n",
@@ -973,23 +972,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_correlation_matrix_and_save(df, style=\"seaborn\", plot_size=(10, 8), path=\"/tmp/corr_plot.png\"):\n",
+    "def plot_correlation_matrix_and_save(\n",
+    "    df, style=\"seaborn\", plot_size=(10, 8), path=\"/tmp/corr_plot.png\"\n",
+    "):\n",
     "    with plt.style.context(style=style):\n",
     "        fig, ax = plt.subplots(figsize=plot_size)\n",
-    "        \n",
+    "\n",
     "        # Calculate the correlation matrix\n",
     "        corr = df.corr()\n",
-    "        \n",
+    "\n",
     "        # Generate a mask for the upper triangle\n",
     "        mask = np.triu(np.ones_like(corr, dtype=bool))\n",
-    "        \n",
+    "\n",
     "        # Draw the heatmap with the mask and correct aspect ratio\n",
-    "        sns.heatmap(corr, mask=mask, cmap='coolwarm', vmax=.3, center=0,\n",
-    "                    square=True, linewidths=.5, annot=True, fmt=\".2f\")\n",
-    "        \n",
+    "        sns.heatmap(\n",
+    "            corr,\n",
+    "            mask=mask,\n",
+    "            cmap=\"coolwarm\",\n",
+    "            vmax=0.3,\n",
+    "            center=0,\n",
+    "            square=True,\n",
+    "            linewidths=0.5,\n",
+    "            annot=True,\n",
+    "            fmt=\".2f\",\n",
+    "        )\n",
+    "\n",
     "        ax.set_title(\"Feature Correlation Matrix\", fontsize=14)\n",
     "        plt.tight_layout()\n",
-    "        \n",
+    "\n",
     "    plt.close(fig)\n",
     "    # convert to filesystem path spec for os compatibility\n",
     "    save_path = pathlib.Path(path)\n",
@@ -1074,8 +1084,8 @@
     "\n",
     "mlflow.set_experiment(\"Visualizations Demo\")\n",
     "\n",
-    "X = my_data.drop(columns=['demand', 'date'])\n",
-    "y = my_data['demand']\n",
+    "X = my_data.drop(columns=[\"demand\", \"date\"])\n",
+    "y = my_data[\"demand\"]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
     "\n",
     "\n",
@@ -1088,16 +1098,15 @@
     "plot_correlation_matrix_and_save(my_data)\n",
     "\n",
     "with mlflow.start_run() as run:\n",
-    "    \n",
     "    # Define our Ridge model\n",
     "    model = Ridge(alpha=1.0)\n",
-    "    \n",
+    "\n",
     "    # Train the model\n",
     "    model.fit(X_train, y_train)\n",
-    "    \n",
+    "\n",
     "    # Make predictions\n",
     "    y_pred = model.predict(X_test)\n",
-    "    \n",
+    "\n",
     "    # Calculate error metrics\n",
     "    mse = mean_squared_error(y_test, y_pred)\n",
     "    rmse = math.sqrt(mse)\n",
@@ -1105,31 +1114,24 @@
     "    r2 = r2_score(y_test, y_pred)\n",
     "    msle = mean_squared_log_error(y_test, y_pred)\n",
     "    medae = median_absolute_error(y_test, y_pred)\n",
-    "    \n",
+    "\n",
     "    # Generate prediction-dependent plots\n",
     "    fig5 = plot_residuals(y_test, y_pred)\n",
     "    fig6 = plot_coefficients(model, X_test.columns)\n",
     "    fig7 = plot_prediction_error(y_test, y_pred)\n",
     "    fig8 = plot_qq(y_test, y_pred)\n",
-    "    \n",
+    "\n",
     "    # Log the model\n",
     "    mlflow.sklearn.log_model(sk_model=model, input_example=X_test, artifact_path=\"model\")\n",
-    "    \n",
+    "\n",
     "    # Log the metrics\n",
     "    mlflow.log_metrics(\n",
-    "        {\n",
-    "            \"mse\": mse, \n",
-    "            \"rmse\": rmse,\n",
-    "            \"mae\": mae,\n",
-    "            \"r2\": r2,\n",
-    "            \"msle\": msle,\n",
-    "            \"medae\": medae\n",
-    "        }\n",
+    "        {\"mse\": mse, \"rmse\": rmse, \"mae\": mae, \"r2\": r2, \"msle\": msle, \"medae\": medae}\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Log the hyperparameter\n",
     "    mlflow.log_param(\"alpha\", 1.0)\n",
-    "    \n",
+    "\n",
     "    # Log plots\n",
     "    mlflow.log_figure(fig1, \"time_series_demand.png\")\n",
     "    mlflow.log_figure(fig2, \"box_weekend.png\")\n",
@@ -1139,9 +1141,9 @@
     "    mlflow.log_figure(fig6, \"coefficients_plot.png\")\n",
     "    mlflow.log_figure(fig7, \"prediction_errors.png\")\n",
     "    mlflow.log_figure(fig8, \"qq_plot.png\")\n",
-    "    \n",
+    "\n",
     "    # Log the saved correlation matrix plot by referring to the local file system location\n",
-    "    mlflow.log_artifact(\"/tmp/corr_plot.png\")\n"
+    "    mlflow.log_artifact(\"/tmp/corr_plot.png\")"
    ]
   }
  ],
