--- a/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/parent-child-runs.ipynb
+++ b/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/parent-child-runs.ipynb
@@ -72,9 +72,7 @@
     "    # Partial application of the log_run function\n",
     "    log_current_run = partial(log_run, test_no=test_no)\n",
     "    # Generate run names and apply log_current_run function to each run name\n",
-    "    runs = starmap(\n",
-    "        log_current_run, ((run_name,) for run_name in generate_run_names(test_no))\n",
-    "    )\n",
+    "    runs = starmap(log_current_run, ((run_name,) for run_name in generate_run_names(test_no)))\n",
     "    # Consume the iterator to execute the runs\n",
     "    consume(runs)\n",
     "\n",
@@ -138,14 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a function to log parameters and metrics and add tag \n",
+    "# Define a function to log parameters and metrics and add tag\n",
     "# logging for search_runs functionality\n",
-    "def log_run(run_name, \n",
-    "            test_no, \n",
-    "            param1_choices, \n",
-    "            param2_choices, \n",
-    "            tag_ident\n",
-    "           ):\n",
+    "def log_run(run_name, test_no, param1_choices, param2_choices, tag_ident):\n",
     "    with mlflow.start_run(run_name=run_name, nested=True):\n",
     "        mlflow.log_param(\"param1\", random.choice(param1_choices))\n",
     "        mlflow.log_param(\"param2\", random.choice(param2_choices))\n",
@@ -159,29 +152,25 @@
     "    return (f\"run_{i}_test_{test_no}\" for i in range(num_runs))\n",
     "\n",
     "\n",
-    "# Execute tuning function, allowing for param overrides, \n",
+    "# Execute tuning function, allowing for param overrides,\n",
     "# run_name disambiguation, and tagging support\n",
-    "def execute_tuning(test_no, \n",
-    "                   param1_choices=[\"a\", \"b\", \"c\"], \n",
-    "                   param2_choices=[\"d\", \"e\", \"f\"], \n",
-    "                   test_identifier=\"\"\n",
-    "                  ):\n",
+    "def execute_tuning(\n",
+    "    test_no, param1_choices=[\"a\", \"b\", \"c\"], param2_choices=[\"d\", \"e\", \"f\"], test_identifier=\"\"\n",
+    "):\n",
     "    ident = \"default\" if not test_identifier else test_identifier\n",
     "    # Use a parent run to encapsulate the child runs\n",
     "    with mlflow.start_run(run_name=f\"parent_run_test_{ident}_{test_no}\"):\n",
     "        # Partial application of the log_run function\n",
-    "        log_current_run = partial(log_run, \n",
-    "                                  test_no=test_no, \n",
-    "                                  param1_choices=param1_choices, \n",
-    "                                  param2_choices=param2_choices,\n",
-    "                                  tag_ident = ident,\n",
-    "                                 )\n",
+    "        log_current_run = partial(\n",
+    "            log_run,\n",
+    "            test_no=test_no,\n",
+    "            param1_choices=param1_choices,\n",
+    "            param2_choices=param2_choices,\n",
+    "            tag_ident=ident,\n",
+    "        )\n",
     "        mlflow.set_tag(\"test_identifier\", ident)\n",
     "        # Generate run names and apply log_current_run function to each run name\n",
-    "        runs = starmap(\n",
-    "            log_current_run, \n",
-    "            ((run_name,) for run_name in generate_run_names(test_no))\n",
-    "        )\n",
+    "        runs = starmap(log_current_run, ((run_name,) for run_name in generate_run_names(test_no)))\n",
     "        # Consume the iterator to execute the runs\n",
     "        consume(runs)\n",
     "\n",
@@ -195,12 +184,7 @@
     "param_2_values = [\"u\", \"v\", \"w\"]\n",
     "\n",
     "# Execute hyperparameter tuning runs with custom parameter choices\n",
-    "consume(\n",
-    "    starmap(\n",
-    "        execute_tuning, \n",
-    "        ((x, param_1_values, param_2_values) for x in range(5))\n",
-    "    )\n",
-    ")\n"
+    "consume(starmap(execute_tuning, ((x, param_1_values, param_2_values) for x in range(5))))"
    ]
   },
   {
@@ -236,11 +220,7 @@
     "param_1_values = [\"x\", \"y\", \"z\"]\n",
     "param_2_values = [\"u\", \"v\", \"w\"]\n",
     "ident = \"params_test_2\"\n",
-    "consume(\n",
-    "    starmap(\n",
-    "        execute_tuning, ((x, param_1_values, param_2_values, ident) for x in range(5))\n",
-    "    )\n",
-    ")"
+    "consume(starmap(execute_tuning, ((x, param_1_values, param_2_values, ident) for x in range(5))))"
    ]
   },
   {
@@ -280,11 +260,7 @@
     "param_1_values = [\"b\", \"c\"]\n",
     "param_2_values = [\"d\", \"f\"]\n",
     "ident = \"params_test_3\"\n",
-    "consume(\n",
-    "    starmap(\n",
-    "        execute_tuning, ((x, param_1_values, param_2_values, ident) for x in range(5))\n",
-    "    )\n",
-    ")"
+    "consume(starmap(execute_tuning, ((x, param_1_values, param_2_values, ident) for x in range(5))))"
    ]
   },
   {
@@ -317,26 +293,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a function to log parameters and metrics and add tag \n",
+    "# Define a function to log parameters and metrics and add tag\n",
     "# logging for search_runs functionality\n",
-    "def log_run(run_name, \n",
-    "            test_no, \n",
-    "            param1_choices, \n",
-    "            param2_choices, \n",
-    "            tag_ident\n",
-    "           ):\n",
+    "def log_run(run_name, test_no, param1_choices, param2_choices, tag_ident):\n",
     "    with mlflow.start_run(run_name=run_name, nested=True) as run:\n",
     "        param1 = random.choice(param1_choices)\n",
     "        param2 = random.choice(param2_choices)\n",
     "        metric1 = random.uniform(0, 1)\n",
     "        metric2 = abs(random.gauss(5, 2.5))\n",
-    "        \n",
+    "\n",
     "        mlflow.log_param(\"param1\", param1)\n",
     "        mlflow.log_param(\"param2\", param2)\n",
     "        mlflow.log_metric(\"metric1\", metric1)\n",
     "        mlflow.log_metric(\"metric2\", metric2)\n",
     "        mlflow.set_tag(\"test_identifier\", tag_ident)\n",
-    "        \n",
+    "\n",
     "        return run.info.run_id, metric1, param1, param2\n",
     "\n",
     "\n",
@@ -345,38 +316,42 @@
     "    return (f\"run_{i}_test_{test_no}\" for i in range(num_runs))\n",
     "\n",
     "\n",
-    "# Execute tuning function, allowing for param overrides, \n",
+    "# Execute tuning function, allowing for param overrides,\n",
     "# run_name disambiguation, and tagging support\n",
-    "def execute_tuning(test_no, \n",
-    "                   param1_choices=[\"a\", \"b\", \"c\"], \n",
-    "                   param2_choices=[\"d\", \"e\", \"f\"], \n",
-    "                   test_identifier=\"\",\n",
-    "                   num_child_runs=5\n",
-    "                  ):\n",
+    "def execute_tuning(\n",
+    "    test_no,\n",
+    "    param1_choices=[\"a\", \"b\", \"c\"],\n",
+    "    param2_choices=[\"d\", \"e\", \"f\"],\n",
+    "    test_identifier=\"\",\n",
+    "    num_child_runs=5,\n",
+    "):\n",
     "    ident = \"default\" if not test_identifier else test_identifier\n",
-    "    best_metric1 = float('inf')\n",
+    "    best_metric1 = float(\"inf\")\n",
     "    best_params = None\n",
     "    # Use a parent run to encapsulate the child runs\n",
     "    with mlflow.start_run(run_name=f\"parent_run_test_{ident}_{test_no}\"):\n",
     "        # Partial application of the log_run function\n",
-    "        log_current_run = partial(log_run, \n",
-    "                                  test_no=test_no, \n",
-    "                                  param1_choices=param1_choices, \n",
-    "                                  param2_choices=param2_choices,\n",
-    "                                  tag_ident = ident,\n",
-    "                                 )\n",
+    "        log_current_run = partial(\n",
+    "            log_run,\n",
+    "            test_no=test_no,\n",
+    "            param1_choices=param1_choices,\n",
+    "            param2_choices=param2_choices,\n",
+    "            tag_ident=ident,\n",
+    "        )\n",
     "        mlflow.set_tag(\"test_identifier\", ident)\n",
     "        # Generate run names and apply log_current_run function to each run name\n",
-    "        results = list(starmap(\n",
-    "            log_current_run, \n",
-    "            ((run_name,) for run_name in generate_run_names(test_no, num_child_runs))\n",
-    "        ))\n",
-    "        \n",
+    "        results = list(\n",
+    "            starmap(\n",
+    "                log_current_run,\n",
+    "                ((run_name,) for run_name in generate_run_names(test_no, num_child_runs)),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
     "        for _, metric1, param1, param2 in results:\n",
     "            if metric1 < best_metric1:\n",
     "                best_metric1 = metric1\n",
     "                best_params = (param1, param2)\n",
-    "                \n",
+    "\n",
     "        mlflow.log_metric(\"best_metric1\", best_metric1)\n",
     "        mlflow.log_param(\"best_param1\", best_params[0])\n",
     "        mlflow.log_param(\"best_param2\", best_params[1])\n",
@@ -394,10 +369,9 @@
     "# Execute hyperparameter tuning runs with custom parameter choices\n",
     "consume(\n",
     "    starmap(\n",
-    "        execute_tuning, \n",
-    "        ((x, param_1_values, param_2_values, \"subset_test\", 25) for x in range(5))\n",
+    "        execute_tuning, ((x, param_1_values, param_2_values, \"subset_test\", 25) for x in range(5))\n",
     "    )\n",
-    ")\n"
+    ")"
    ]
   },
   {
