adjust run context code samples
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/logging-plots-in-mlflow.ipynb
+++ b/docs/source/guides/introductory/hyperparameter-tuning-with-child-runs/notebooks/logging-plots-in-mlflow.ipynb
@@ -1088,7 +1088,6 @@
     "y = my_data[\"demand\"]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
     "\n",
-    "\n",
     "fig1 = plot_time_series_demand(my_data, window_size=28)\n",
     "fig2 = plot_box_weekend(my_data)\n",
     "fig3 = plot_scatter_demand_price(my_data)\n",
@@ -1097,30 +1096,31 @@
     "# Execute the correlation plot, saving the plot to a local temporary directory\n",
     "plot_correlation_matrix_and_save(my_data)\n",
     "\n",
+    "# Define our Ridge model\n",
+    "model = Ridge(alpha=1.0)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calculate error metrics\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = math.sqrt(mse)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "msle = mean_squared_log_error(y_test, y_pred)\n",
+    "medae = median_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "# Generate prediction-dependent plots\n",
+    "fig5 = plot_residuals(y_test, y_pred)\n",
+    "fig6 = plot_coefficients(model, X_test.columns)\n",
+    "fig7 = plot_prediction_error(y_test, y_pred)\n",
+    "fig8 = plot_qq(y_test, y_pred)\n",
+    "\n",
+    "# Start an MLflow run for logging metrics, parameters, the model, and our figures\n",
     "with mlflow.start_run() as run:\n",
-    "    # Define our Ridge model\n",
-    "    model = Ridge(alpha=1.0)\n",
-    "\n",
-    "    # Train the model\n",
-    "    model.fit(X_train, y_train)\n",
-    "\n",
-    "    # Make predictions\n",
-    "    y_pred = model.predict(X_test)\n",
-    "\n",
-    "    # Calculate error metrics\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    rmse = math.sqrt(mse)\n",
-    "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "    msle = mean_squared_log_error(y_test, y_pred)\n",
-    "    medae = median_absolute_error(y_test, y_pred)\n",
-    "\n",
-    "    # Generate prediction-dependent plots\n",
-    "    fig5 = plot_residuals(y_test, y_pred)\n",
-    "    fig6 = plot_coefficients(model, X_test.columns)\n",
-    "    fig7 = plot_prediction_error(y_test, y_pred)\n",
-    "    fig8 = plot_qq(y_test, y_pred)\n",
-    "\n",
     "    # Log the model\n",
     "    mlflow.sklearn.log_model(sk_model=model, input_example=X_test, artifact_path=\"model\")\n",
     "\n",
